--- a/mod.conf
+++ b/mod.conf
@@ -3,3 +3,4 @@ author = Jordan Irwin (AntumDeluge)
 description = Hides player's nametag from view.
 license = MIT
 version = 1.0
+optional_depends = intllib
