--- a/mod.conf
+++ b/mod.conf
@@ -4,4 +4,4 @@ description = Hides player's nametag from view.
 license = MIT
 version = 1.1
 min_minetest_version = 5.0
-optional_depends = invisibility
+optional_depends = invisibility, invisible
